--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Show and hide div with JavaScript</title>
     <meta name="viewport" content="width=device-width, i1nitial-scale=1" http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
+teeeeeest
     <style>
     * {
       box-sizing: border-box;
